; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_proc_namespace.c_mounts_release.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_proc_namespace.c_mounts_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.seq_file* }
%struct.seq_file = type { %struct.proc_mounts* }
%struct.proc_mounts = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @mounts_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mounts_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.seq_file*, align 8
  %6 = alloca %struct.proc_mounts*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %7 = load %struct.file*, %struct.file** %4, align 8
  %8 = getelementptr inbounds %struct.file, %struct.file* %7, i32 0, i32 0
  %9 = load %struct.seq_file*, %struct.seq_file** %8, align 8
  store %struct.seq_file* %9, %struct.seq_file** %5, align 8
  %10 = load %struct.seq_file*, %struct.seq_file** %5, align 8
  %11 = getelementptr inbounds %struct.seq_file, %struct.seq_file* %10, i32 0, i32 0
  %12 = load %struct.proc_mounts*, %struct.proc_mounts** %11, align 8
  store %struct.proc_mounts* %12, %struct.proc_mounts** %6, align 8
  %13 = load %struct.proc_mounts*, %struct.proc_mounts** %6, align 8
  %14 = getelementptr inbounds %struct.proc_mounts, %struct.proc_mounts* %13, i32 0, i32 1
  %15 = call i32 @path_put(i32* %14)
  %16 = load %struct.proc_mounts*, %struct.proc_mounts** %6, align 8
  %17 = getelementptr inbounds %struct.proc_mounts, %struct.proc_mounts* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @put_mnt_ns(i32 %18)
  %20 = load %struct.inode*, %struct.inode** %3, align 8
  %21 = load %struct.file*, %struct.file** %4, align 8
  %22 = call i32 @seq_release_private(%struct.inode* %20, %struct.file* %21)
  ret i32 %22
}

declare dso_local i32 @path_put(i32*) #1

declare dso_local i32 @put_mnt_ns(i32) #1

declare dso_local i32 @seq_release_private(%struct.inode*, %struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
